// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/ListModal should match snapshot 1`] = `
<body
  class="modal-open"
  style="padding-right: 0px;"
>
  <div
    aria-hidden="true"
  >
    <div />
  </div>
  <div
    role="dialog"
  >
    <div
      class="fade modal-backdrop in"
    />
    <div
      class="fade in modal"
      role="dialog"
      style="display: block; padding-right: 0px;"
      tabindex="-1"
    >
      <div
        class="a11y__modal more-modal more-modal--action modal-dialog"
      >
        <div
          class="modal-content"
          role="document"
        >
          <div
            class="modal-header"
          >
            <button
              aria-label="Close"
              class="close"
              type="button"
            >
              <span
                aria-hidden="true"
              >
                ×
              </span>
              <span
                class="sr-only"
              >
                Close
              </span>
            </button>
            <h1
              class="modal-title"
            >
              <span
                class="name"
              >
                list modal
              </span>
            </h1>
          </div>
          <div
            class="modal-body"
          >
            <div
              class="filtered-user-list"
            >
              <div
                class="filter-row"
              >
                <div
                  class="col-xs-12"
                >
                  <label
                    class="hidden-label"
                    for="searchUsersInput"
                  >
                    search for name
                  </label>
                  <input
                    class="form-control filter-textbox"
                    id="searchUsersInput"
                    placeholder="search for name"
                  />
                </div>
                <div
                  class="col-sm-12"
                >
                  <span
                    class="member-count pull-left"
                  >
                    1 - 2 of 3 total
                  </span>
                </div>
              </div>
              <div
                class="more-modal__list"
              >
                <div>
                  <div
                    class="item"
                    data-testid="item-123"
                  >
                    123
                  </div>
                  <div
                    class="item"
                    data-testid="item-234"
                  >
                    234
                  </div>
                </div>
              </div>
              <div
                class="filter-controls"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`components/ListModal should match snapshot with title bar button 1`] = `
<body
  class="modal-open"
  style="padding-right: 0px;"
>
  <div
    aria-hidden="true"
  >
    <div />
  </div>
  <div
    role="dialog"
  >
    <div
      class="fade modal-backdrop in"
    />
    <div
      class="fade in modal"
      role="dialog"
      style="display: block; padding-right: 0px;"
      tabindex="-1"
    >
      <div
        class="a11y__modal more-modal more-modal--action modal-dialog"
      >
        <div
          class="modal-content"
          role="document"
        >
          <div
            class="modal-header"
          >
            <button
              aria-label="Close"
              class="close"
              type="button"
            >
              <span
                aria-hidden="true"
              >
                ×
              </span>
              <span
                class="sr-only"
              >
                Close
              </span>
            </button>
            <h1
              class="modal-title"
            >
              <span
                class="name"
              >
                list modal
              </span>
            </h1>
            <a
              class="btn btn-md btn-primary"
              href="#"
            >
              Add Foo
            </a>
          </div>
          <div
            class="modal-body"
          >
            <div
              class="filtered-user-list"
            >
              <div
                class="filter-row"
              >
                <div
                  class="col-xs-12"
                >
                  <label
                    class="hidden-label"
                    for="searchUsersInput"
                  >
                    search for name
                  </label>
                  <input
                    class="form-control filter-textbox"
                    id="searchUsersInput"
                    placeholder="search for name"
                  />
                </div>
                <div
                  class="col-sm-12"
                >
                  <span
                    class="member-count pull-left"
                  >
                    1 - 2 of 3 total
                  </span>
                </div>
              </div>
              <div
                class="more-modal__list"
              >
                <div>
                  <div
                    class="item"
                    data-testid="item-123"
                  >
                    123
                  </div>
                  <div
                    class="item"
                    data-testid="item-234"
                  >
                    234
                  </div>
                </div>
              </div>
              <div
                class="filter-controls"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
